Добавление выбора текстур

--- a/02_vizualizator.html
+++ b/02_vizualizator.html
@@ -37,6 +37,7 @@
                     <button v-on:click="changeColor" class="material-select material-1" id="material-1"> </button>
                     <button v-on:click="changeColor" class="material-select material-2" id="material-2"> </button>
                     <button v-on:click="changeColor" class="material-select material-3" id="material-3"> </button>
+                    <button v-on:click="changeMaterial" class="material-select" id="material-4">Тек.</button>
                     <button v-on:click="resetColor" class="material-select" id="material-reset">Сброс</button>
                 </div>
             </div>
