--- a/vizualizator_v2.html
+++ b/vizualizator_v2.html
@@ -43,12 +43,13 @@
                     <button v-on:click="changeMaterial" class="material-select material-4" id="material-4" style="background: url(assets/img/materials/Bradshaw.jpg);"> </button>
                     <button v-on:click="changeMaterial" class="material-select material-4" style="background: url(assets/img/materials/Zirix.jpg);"> </button>
                     <button v-on:click="changeMaterial" class="material-select material-4" style="background: url(assets/img/materials/CK230_Mykonos_Beige.jpg);"> </button>
+                    <button v-on:click="changeMaterial" class="material-select material-5" style="background: url(assets/img/materials/test_material.jpg);">Тест</button>
                     <button v-on:click="resetColor" class="material-select" id="material-reset">Сброс</button>
                 </div>
             </div>
             <div style="clear: both;"></div>
             <h3>Отладка:</h3>
-            <p>isActive: <b></b></p>
+            <p>&nbsp;<b>&nbsp;</b></p>
         </div>
     </template>
 
