--- a/vizualizator_v3.html
+++ b/vizualizator_v3.html
@@ -31,13 +31,7 @@
                             @mouseout="handleMouseOut" 
                             @click="handleMouseClick" 
                         />
-                    </v-layer>
-                    <v-image
-                        ref="image"
-                        v-for="item in imagesArr" 
-                        :key="item.id" 
-                        :config="item.config"
-                    />
+                    </v-layer>                    
                 </v-stage>
             </div>
 
@@ -48,22 +42,24 @@
                     <button v-on:click="changeColor" class="material-select material-2" id="material-2"> </button>
                     <button v-on:click="changeColor" class="material-select material-3" id="material-3"> </button>
                     <button v-on:click="changeMaterial" class="material-select material-4" id="material-4" style="background: url(assets/img/materials/Bradshaw.jpg);"> </button>
-                    <button v-on:click="changeMaterial" class="material-select material-4" style="background: url(assets/img/materials/Zirix.jpg);"> </button>
-                    <button v-on:click="changeMaterial" class="material-select material-4" style="background: url(assets/img/materials/CK230_Mykonos_Beige.jpg);"> </button>
-                    <button v-on:click="changeMaterial" class="material-select material-5" style="background: url(assets/img/materials/test_material.jpg);">Тест</button>
+                    <button v-on:click="changeMaterial" class="material-select material-5" style="background: url(assets/img/materials/Zirix.jpg);"> </button>
+                    <button v-on:click="changeMaterial" class="material-select material-6" style="background: url(assets/img/materials/CK230_Mykonos_Beige.jpg);"> </button>
+                    <button v-on:click="getFiles" class="material-select material-7">Файлы</button>                   
+                    
                     <button v-on:click="changeMaterial" class="material-select material-6" style="background: url(assets/img/objects/table_green.jpg);">Фото</button>
                     <button v-on:click="resetColor" class="material-select" id="material-reset">Сброс</button>
                 </div>
             </div>
             <div style="clear: both;"></div>
             <h3>Отладка:</h3>
-            <p>&nbsp;<b>&nbsp;</b></p>
+            <p>&nbsp;<b>{{ success }}</b></p>
         </div>
     </template>
 
     <script src="assets/js/vuejs/vue.js"></script>
     <script src="assets/js/konva.min.js"></script>
     <script src="assets/js/vue-konva.min.js"></script>
+    <script src="assets/js/axios.min.js"></script>
     <script src="assets/js/vuejs/app_vizualizator_v3.js
     "></script>
 
